# udiff

./: .gitignore  Gemfile  Rakefile  diff.patch  file.txt  udiff.gemspec
ext/udiff/: Cargo.toml  extconf.rb
ext/udiff/src/: lib.rs
lib/: udiff.rb
lib/udiff/: cli.rb  version.rb
